fix(ui): fix stuck

--- a/src/ui/pages/Credentials/components/ProfileStateModal/ProfileStateModal.scss
+++ b/src/ui/pages/Credentials/components/ProfileStateModal/ProfileStateModal.scss
@@ -1,4 +1,4 @@
-.profile-state-modal {
+.profile-state-page {
   .page-header {
     ion-title {
       h2 {
